# Regular-Simplex-based-Robust-ERM

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
runs/skin_srerm/: baseline_stats.json  metrics.json  srerm_result.json  subset_stats.json  subsets.json
srerm_skin/configs/: default_skin_srerm.yaml
srerm_skin/data/: folder_dataset.py  simple_transforms.py  skin_dataset.py  transforms.py
srerm_skin/geometry/: simplex.py
srerm_skin/models/: mobilenetv3.py
srerm_skin/sampling/: subset_builder.py
srerm_skin/scripts/: evaluate.py  train_srerm.py
srerm_skin/training/: baseline.py  dimred.py  embedding.py  srerm.py
srerm_skin/utils/: checkpoint.py  io.py  logging.py  metrics.py  seed.py
